--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
             class="bd-placeholder-img rounded-circle"
             width="140"
             height="140"
-            src="1.2.jpeg"
+            src="/1.2.jpeg"
             alt=""
           />
 
@@ -277,7 +277,7 @@
             class="bd-placeholder-img rounded-circle"
             width="140"
             height="140"
-            src="1.3.jpeg"
+            src="/1.3.jpeg"
             alt=""
           />
 
