--- a/index.html
+++ b/index.html
@@ -213,13 +213,13 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="/1.jpeg" class="d-block w-100" alt="..." />
+          <img src="1.jpeg" class="d-block w-100" alt="..." />
         </div>
         <div class="carousel-item">
-          <img src="/2.jpeg" class="d-block w-100" alt="..." />
+          <img src="2.jpeg" class="d-block w-100" alt="..." />
         </div>
         <div class="carousel-item">
-          <img src="/3.jpeg" class="d-block w-100" alt="..." />
+          <img src="3.jpeg" class="d-block w-100" alt="..." />
         </div>
       </div>
       <button
@@ -249,7 +249,7 @@
             class="bd-placeholder-img rounded-circle"
             width="140"
             height="140"
-            src="/1.1.jpeg"
+            src="1.1.jpeg"
             alt=""
           />
 
@@ -263,7 +263,7 @@
             class="bd-placeholder-img rounded-circle"
             width="140"
             height="140"
-            src="/1.2.jpeg"
+            src="1.2.jpeg"
             alt=""
           />
 
@@ -277,7 +277,7 @@
             class="bd-placeholder-img rounded-circle"
             width="140"
             height="140"
-            src="/1.3.jpeg"
+            src="1.3.jpeg"
             alt=""
           />
 
